mejoras en el diseño del proyecto 02/06

--- a/FORMULARIO_P/segundo.html
+++ b/FORMULARIO_P/segundo.html
@@ -59,15 +59,15 @@
 
       <label for="dir">Ciudad de origen y destino del viaje:</label><br>
       <select id="ciudad" class="form-group" onblur="validarSeleccion()">
-        <option value="">Selecciona una opción</option>
-        <option value="opcion1">BOGOTÁ - CALÍ</option>
-        <option value="opcion2">BOGOTÁ - MEDELLÍN</option>
-        <option value="opcion3">BOGOTÁ - MANIZALES</option>
-        <option value="opcion4">BOGOTÁ - BARRANQUILLA</option>
-        <option value="opcion5">CALÍ - BOGOTÁ</option>
-        <option value="opcion6">MEDELLÍN - BOGOTÁ</option>
-        <option value="opcion7">MANIZALES - BOGOTÁ</option>
-        <option value="opcion8">BARRANQUILLA - BOGOTÁ</option>
+        <option value="">Selecciona una opción de viaje</option>
+        <option value="opcion1">BOGOTÁ - CALÍ - $200.000</option>
+        <option value="opcion2">BOGOTÁ - MEDELLÍN - $300.000</option>
+        <option value="opcion3">BOGOTÁ - MANIZALES - $150.000</option>
+        <option value="opcion4">BOGOTÁ - BARRANQUILLA - $220.000</option>
+        <option value="opcion5">CALÍ - BOGOTÁ - $200.000</option>
+        <option value="opcion6">MEDELLÍN - BOGOTÁ - $300.000</option>
+        <option value="opcion7">MANIZALES - BOGOTÁ - $150.000</option>
+        <option value="opcion8">BARRANQUILLA - BOGOTÁ - $220.000</option>
       </select>
 
 
